no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 8f17db3a71db2ee2ca59466130ca0a67ec65f0b9

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-fr/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-fr/strings.xml
@@ -4748,6 +4748,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4773,6 +4787,76 @@ ou
 de
 s
 curit
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+enfreint
+les
+politiques
+de
+Mozilla
+et
+ne
+peut
+tre
+install
+dans
+%
+2
+s
 .
 <
 /
@@ -4910,6 +4994,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4924,6 +5022,77 @@ ne
 peut
 tre
 install
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+enfreint
+les
+politiques
+de
+Mozilla
+et
+ne
+peut
+tre
+install
+dans
+%
+2
+s
 .
 <
 /
@@ -6054,6 +6223,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -6101,6 +6284,76 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Cette
+extension
+est
+bloqu
+e
+car
+elle
+enfreint
+les
+politiques
+de
+Mozilla
+et
+a
+t
+d
+sactiv
+e
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -6115,9 +6368,95 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Cette
 extension
+enfreint
+les
+politiques
+de
+Mozilla
+et
+a
+t
+d
+sactiv
+e
+.
+Vous
+pouvez
+l
+activer
+mais
+son
+utilisation
+comporte
+des
+risques
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Cette
+extension
+est
+restreinte
+car
+elle
 enfreint
 les
 politiques
