--- a/mobile/android/fenix/app/src/main/res/values-fi/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-fi/strings.xml
@@ -3298,6 +3298,53 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Sinulla
+on
+asennettuna
+laajennuksia
+mutta
+niit
+ei
+ole
+otettu
+k
+ytt
+n
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3348,6 +3395,80 @@ yksityisyyden
 sek
 turvallisuuden
 parantamiseen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Jos
+haluat
+k
+ytt
+laajennuksia
+ota
+ne
+k
+ytt
+n
+asetuksissa
+tai
+valitsemalla
+alta
+%
+s
 .
 <
 /
@@ -6810,13 +6931,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Hakukone
