--- a/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
@@ -3314,6 +3314,51 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Imate
+name
+ene
+raz
+iritve
+ki
+pa
+niso
+omogo
+ene
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3371,6 +3416,83 @@ anja
 zasebnosti
 in
 varnosti
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Za
+uporabo
+jih
+omogo
+ite
+v
+nastavitvah
+ali
+z
+izbiro
+&
+quot
+;
+%
+s
+&
+quot
+;
+spodaj
 .
 <
 /
@@ -6662,13 +6784,6 @@ name
 "
 search_engine_icon_content_description
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Iskalnik
 %
@@ -8534,6 +8649,53 @@ UnusedResources
 >
 uBlock
 Origin
+<
+/
+string
+>
+<
+!
+-
+-
+Ublock
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_ublock_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Zmogljivo
+in
+u
+inkovito
+blokiranje
+oglasov
+.
 <
 /
 string
