--- a/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
@@ -3555,6 +3555,53 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+St
+laich
+thu
+leudachain
+ach
+cha
+do
+chuir
+thu
+an
+comas
+iad
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3617,6 +3664,87 @@ s
 bhailteachd
 a
 bharrachd
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Feumaidh
+tu
+leudachan
+a
+chur
+an
+comas
+mus
+urrainn
+dhut
+an
+cleachdadh
+no
+le
+bhith
+a
+taghadh
+%
+s
+gu
+h
+-
+osal
 .
 <
 /
@@ -5534,6 +5662,58 @@ r
 taice
 nan
 leudachan
+a
+dh
+nadh
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+save
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_save_menu_handlebar_content_description
+"
+>
+An
+siota
+airson
+cl
+r
+-
+taice
+an
+t
+-
+s
+bhalaidh
 a
 dh
 nadh
@@ -12467,6 +12647,63 @@ string
 !
 -
 -
+Toast
+shown
+after
+updating
+the
+Mozilla
+account
+/
+Sync
+server
+override
+preferences
+-
+-
+>
+<
+string
+name
+=
+"
+toast_override_account_sync_server_done
+"
+>
+Chaidh
+frithealaichte
+nan
+cunntasan
+Mozilla
+no
+an
+t
+-
+sioncronachaidh
+atharrachadh
+.
+F
+g
+an
+aplacaid
+gus
+na
+h
+-
+atharraichean
+a
+chur
+an
+gn
+omh
+<
+/
+string
+>
+<
+!
+-
+-
 Preference
 category
 for
@@ -12484,6 +12721,41 @@ preferences_category_account
 "
 >
 Cunntas
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+changing
+where
+the
+AddressBar
+is
+positioned
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_toolbar_2
+"
+>
+Ionad
+b
+r
+an
+t
+-
+se
+laidh
 <
 /
 string
@@ -12657,6 +12929,44 @@ string
 -
 -
 Preference
+shown
+instead
+of
+account
+display
+name
+while
+account
+profile
+information
+isn
+'
+t
+available
+yet
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_account_default_name_2
+"
+>
+Cunntas
+Mozilla
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
 text
 for
 account
@@ -12714,6 +13024,31 @@ preferences_language
 >
 C
 nan
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+translations
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_translations
+"
+>
+Eadar
+-
+theangaich
 <
 /
 string
@@ -13106,6 +13441,191 @@ string
 -
 -
 Preference
+title
+for
+switch
+preference
+to
+show
+sponsored
+Firefox
+Suggest
+search
+suggestions
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_show_sponsored_suggestions
+"
+>
+Molaidhean
+o
+na
+sponsairean
+<
+/
+string
+>
+<
+!
+-
+-
+Summary
+for
+preference
+to
+show
+sponsored
+Firefox
+Suggest
+search
+suggestions
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+application
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_show_sponsored_suggestions_summary
+"
+>
+C
+m
+taic
+ri
+%
+1
+s
+s
+tu
+ag
+aontachadh
+ri
+molaidhean
+sponsairichte
+o
+m
+gu
+m
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+title
+for
+switch
+preference
+to
+show
+Firefox
+Suggest
+search
+suggestions
+for
+web
+content
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+application
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_show_nonsponsored_suggestions
+"
+>
+Molaidhean
+o
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Summary
+for
+preference
+to
+show
+Firefox
+Suggest
+search
+suggestions
+for
+web
+content
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_show_nonsponsored_suggestions_summary
+"
+>
+Faigh
+molaidhean
+on
+l
+on
+co
+-
+cheangailte
+ris
+na
+lorg
+thu
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
 for
 open
 links
@@ -13288,6 +13808,139 @@ string
 -
 Preference
 for
+enabling
+gecko
+engine
+logs
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_enable_gecko_logs
+"
+>
+Cuir
+an
+comas
+logaichean
+Gecko
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+to
+indicate
+users
+that
+we
+are
+quitting
+the
+application
+to
+apply
+the
+changes
+-
+-
+>
+<
+string
+name
+=
+"
+quit_application
+"
+>
+A
+d
+nadh
+na
+h
+-
+aplacaid
+gus
+na
+h
+-
+atharraichean
+a
+chur
+an
+s
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+extensions
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_extensions
+"
+>
+Leudachain
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+installing
+a
+local
+extension
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_install_local_extension
+"
+>
+St
+laich
+leudachan
+o
+fhaidhle
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
 notifications
 -
 -
@@ -13359,6 +14012,292 @@ notifications_not_allowed_summary
 >
 Gun
 chead
+<
+/
+string
+>
+<
+!
+-
+-
+Add
+-
+on
+Permissions
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+required
+permissions
+section
+from
+addon
+'
+s
+permissions
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_heading_required
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Riatanach
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+optional
+permissions
+section
+from
+addon
+'
+s
+permissions
+screen
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_heading_optional
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Roghainneil
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+origin
+permission
+option
+allowing
+a
+user
+to
+enable
+the
+extension
+to
+run
+on
+all
+sites
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_allow_for_all_sites
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ceadaich
+do
+gach
+l
+rach
+<
+/
+string
+>
+<
+!
+-
+-
+The
+subtitle
+for
+the
+allow
+for
+all
+sites
+preference
+toggle
+-
+-
+>
+<
+string
+name
+=
+"
+addons_permissions_allow_for_all_sites_subtitle
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Ma
+tha
+earbsa
+agad
+san
+leudachan
+seo
+s
+urrainn
+dhut
+a
+cheadachadh
+air
+gach
+l
+rach
+-
+l
+n
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
+text
+shown
+when
+an
+extension
+does
+not
+require
+permissions
+-
+-
+>
+<
+string
+name
+=
+"
+addons_does_not_require_permissions
+"
+>
+Chan
+eil
+an
+leudachan
+seo
+feumach
+air
+cead
+sam
+bith
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Add
+-
+on
+Preferences
+-
+-
+>
+<
+!
+-
+-
+Preference
+to
+customize
+the
+configured
+AMO
+(
+addons
+.
+mozilla
+.
+org
+)
+collection
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_customize_extension_collection
+"
+>
+Cruinneachadh
+de
+leudachain
+ghn
+thaichte
 <
 /
 string
@@ -13499,6 +14438,54 @@ string
 !
 -
 -
+Toast
+shown
+after
+confirming
+the
+custom
+extension
+collection
+configuration
+-
+-
+>
+<
+string
+name
+=
+"
+toast_customize_extension_collection_done
+"
+>
+Chaidh
+cruinneachadh
+nan
+leudachan
+atharrachadh
+.
+F
+g
+an
+aplacaid
+gus
+na
+h
+-
+atharraichean
+a
+chur
+an
+gn
+omh
+<
+/
+string
+>
+<
+!
+-
+-
 Customize
 Home
 -
@@ -13539,6 +14526,39 @@ far
 an
 robh
 thu
+<
+/
+string
+>
+<
+!
+-
+-
+Title
+for
+the
+customize
+home
+screen
+section
+with
+bookmarks
+.
+-
+-
+>
+<
+string
+name
+=
+"
+customize_toggle_bookmarks
+"
+>
+Comharran
+-
+l
+n
 <
 /
 string
@@ -14079,6 +15099,156 @@ string
 !
 -
 -
+Text
+for
+artist
+series
+wallpapers
+title
+.
+"
+Artist
+series
+"
+represents
+a
+collection
+of
+artist
+collaborated
+wallpapers
+.
+-
+-
+>
+<
+string
+name
+=
+"
+wallpaper_artist_series_title
+"
+>
+Sreath
+luchd
+-
+ealain
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+text
+for
+the
+artist
+series
+wallpapers
+with
+learn
+more
+link
+.
+The
+first
+parameter
+is
+the
+learn
+more
+string
+defined
+in
+wallpaper_learn_more
+.
+"
+Independent
+voices
+"
+is
+the
+name
+of
+the
+wallpaper
+collection
+-
+-
+>
+<
+string
+name
+=
+"
+wallpaper_artist_series_description_with_learn_more
+"
+>
+Cruinneachadh
+nan
+guthan
+neo
+-
+eisimeileach
+.
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+text
+for
+the
+artist
+series
+wallpapers
+.
+"
+Independent
+voices
+"
+is
+the
+name
+of
+the
+wallpaper
+collection
+-
+-
+>
+<
+string
+name
+=
+"
+wallpaper_artist_series_description
+"
+>
+Cruinneachadh
+nan
+guthan
+neo
+-
+eisimeileach
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Wallpaper
 onboarding
 dialog
@@ -14182,6 +15352,385 @@ ipearan
 -
 balla
 eile
+<
+/
+string
+>
+<
+!
+-
+-
+Add
+-
+ons
+general
+availability
+nimbus
+message
+-
+-
+>
+<
+!
+-
+-
+Title
+of
+the
+Nimbus
+message
+for
+extension
+general
+availability
+-
+-
+>
+<
+string
+name
+=
+"
+addon_ga_message_title_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Tha
+leudachain
+ra
+ri
+am
+faighinn
+<
+/
+string
+>
+<
+!
+-
+-
+Body
+of
+the
+Nimbus
+message
+for
+add
+-
+ons
+general
+availability
+.
+'
+Firefox
+'
+intentionally
+hardcoded
+here
+-
+-
+>
+<
+string
+name
+=
+"
+addon_ga_message_body
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Tha
+barrachd
+air
+ceud
+leudachan
+ann
+leis
+an
+doir
+thu
+dreach
+pearsanta
+air
+Firefox
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Button
+text
+of
+the
+Nimbus
+message
+for
+extensions
+general
+availability
+.
+-
+-
+>
+<
+string
+name
+=
+"
+addon_ga_message_button_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+R
+raich
+na
+leudachain
+<
+/
+string
+>
+<
+!
+-
+-
+Extension
+process
+crash
+dialog
+to
+user
+-
+-
+>
+<
+!
+-
+-
+Title
+of
+the
+extension
+crash
+dialog
+shown
+to
+the
+user
+when
+enough
+errors
+have
+occurred
+with
+extensions
+and
+they
+need
+to
+be
+temporarily
+disabled
+-
+-
+>
+<
+string
+name
+=
+"
+extension_process_crash_dialog_title
+"
+>
+Tha
+na
+leudachain
+comas
+an
+-
+dr
+sta
+fh
+in
+<
+/
+string
+>
+<
+!
+-
+-
+This
+is
+a
+message
+shown
+to
+the
+user
+when
+too
+many
+errors
+have
+occurred
+with
+the
+extensions
+process
+and
+they
+have
+been
+disabled
+.
+The
+user
+can
+decide
+if
+they
+would
+like
+to
+continue
+trying
+to
+start
+extensions
+or
+if
+they
+'
+d
+rather
+continue
+without
+them
+.
+The
+first
+parameter
+is
+the
+application
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+extension_process_crash_dialog_message
+"
+>
+Tha
+co
+-
+dhi
+aon
+leudachan
+ann
+a
+tha
+a
+f
+gail
+an
+t
+-
+siostaim
+agad
+neo
+-
+sheasmhach
+.
+Cha
+b
+urrainn
+dha
+%
+1
+s
+na
+leudachain
+ath
+-
+th
+iseachadh
+.
+\
+n
+\
+nCha
+d
+id
+na
+leudachain
+ath
+-
+th
+iseachadh
+r
+an
+t
+-
+seisein
+l
+ithrich
+agad
+.
+\
+n
+\
+nDh
+fhaoidte
+gun
+urrainn
+dhut
+a
+chur
+ceart
+le
+bhith
+a
+toirt
+air
+falbh
+nan
+leudachan
+no
+le
+bhith
+gan
+cur
+comas
+.
 <
 /
 string
@@ -20783,6 +22332,30 @@ string
 -
 -
 Bookmark
+menu
+move
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_menu_move_button
+"
+>
+Gluais
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
 overflow
 menu
 edit
@@ -21624,6 +23197,100 @@ string
 !
 -
 -
+Bookmark
+snackbar
+message
+for
+deleting
+a
+single
+item
+.
+Parameter
+is
+the
+title
+of
+the
+item
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_single_item
+"
+>
+Chaidh
+%
+s
+a
+sguabadh
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
+snackbar
+message
+for
+deleting
+multiple
+items
+.
+Parameter
+is
+the
+number
+of
+items
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_multiple_items
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Chaidh
+na
+nithean
+a
+sguabadh
+s
+%
+s
+dhiubh
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -21991,6 +23658,103 @@ uidheaman
 sioncronaichte
 eile
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+bookmark
+list
+empty
+state
+when
+you
+'
+re
+in
+an
+empty
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_empty_list_folder_description
+"
+>
+Cuir
+comharran
+-
+l
+n
+ris
+fhad
+s
+a
+n
+thu
+brabhsadh
+is
+faigh
+cothrom
+orra
+a
+-
+rithist
+gun
+duilgheadas
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Description
+for
+the
+add
+new
+folder
+button
+when
+selecting
+a
+folder
+.
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_select_folder_new_folder_button_title
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Pasgan
+r
 <
 /
 string
@@ -23335,6 +25099,126 @@ studies_off
 "
 >
 Dheth
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+permissions
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_permissions
+"
+>
+Ceadan
+<
+/
+string
+>
+<
+!
+-
+-
+Category
+header
+of
+a
+preference
+that
+allows
+a
+user
+to
+alter
+settings
+related
+to
+web
+content
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_category_content
+"
+>
+Susbaint
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+default
+browsing
+mode
+.
+When
+enabled
+the
+desktop
+site
+will
+always
+be
+requested
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_feature_desktop_mode_default
+"
+>
+Iarr
+an
+l
+rach
+desktop
+an
+-
+c
+mhnaidh
 <
 /
 string
@@ -26096,6 +27980,74 @@ n
 a
 sh
 bhaladh
+!
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
+bookmarks
+a
+list
+of
+tabs
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_message_bookmarks_saved_in
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Chaidh
+na
+comharran
+-
+l
+n
+a
+sh
+bhaladh
+ann
+an
+%
+s
 !
 <
 /
@@ -29543,6 +31495,72 @@ string
 -
 Preference
 for
+Global
+Privacy
+Control
+for
+the
+custom
+privacy
+settings
+for
+Global
+Privacy
+Control
+.
+'
+&
+amp
+;
+'
+is
+replaced
+with
+the
+ampersand
+symbol
+:
+&
+-
+-
+>
+<
+string
+name
+=
+"
+preference_enhanced_tracking_protection_custom_global_privacy_control
+"
+>
+Iarr
+air
+l
+raichean
+-
+l
+n
+gun
+a
+bhith
+a
+co
+-
+roinneadh
+is
+a
+reic
+d
+ta
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
 enhanced
 tracking
 protection
@@ -29676,6 +31694,41 @@ Criopto
 -
 mh
 inneadairean
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+enhanced
+tracking
+protection
+for
+the
+custom
+protection
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+preference_enhanced_tracking_protection_custom_known_fingerprinters
+"
+>
+Lorgaichean
+-
+meur
+as
+aithne
+dhuinn
 <
 /
 string
@@ -30174,6 +32227,55 @@ string
 !
 -
 -
+Description
+of
+fingerprinters
+that
+can
+be
+blocked
+by
+Enhanced
+Tracking
+Protection
+-
+-
+>
+<
+string
+name
+=
+"
+etp_known_fingerprinters_description
+"
+>
+Cuiridh
+seo
+bacadh
+air
+cruinneachadh
+de
+dh
+ta
+raidh
+mun
+uidheam
+agad
+leis
+am
+b
+urrainnear
+do
+thracadh
+.
+<
+/
+string
+>
+<
+!
+-
+-
 Category
 of
 trackers
@@ -30617,6 +32719,39 @@ nan
 tracaichean
 aithnichte
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+fingerprinting
+protection
+for
+the
+custom
+protection
+settings
+-
+-
+>
+<
+string
+name
+=
+"
+etp_suspected_fingerprinters_title
+"
+>
+Lorgaichean
+-
+meur
+fo
+amharas
 <
 /
 string
@@ -31776,6 +33911,43 @@ na
 faclan
 -
 faire
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+syncing
+saved
+passwords
+in
+Fenix
+when
+not
+signed
+in
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_passwords_sync_logins_across_devices_2
+"
+>
+Sioncronaich
+faclan
+-
+faire
+air
+feadh
+uidheaman
 <
 /
 string
