no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: be7f4b8d0089729e24572f059a5a177d0d6947c0

--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-eo/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-eo/strings.xml
@@ -4181,13 +4181,29 @@ string
 Text
 shown
 after
-failed
+failing
 to
 install
 an
 add
 -
 on
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 %
 1
@@ -4241,6 +4257,22 @@ t
 have
 its
 name
+(
+when
+add
+-
+on
+type
+isn
+'
+t
+supported
+or
+an
+unknown
+has
+errored
+)
 .
 -
 -
@@ -4261,6 +4293,41 @@ i
 etenda
 o
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+installing
+an
+add
+-
+on
+has
+failed
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_cant_install_extension
+"
+>
+Ne
+eblas
+instali
+etenda
+on
 <
 /
 string
@@ -4532,6 +4599,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4549,6 +4630,75 @@ stabilecajn
 a
 sekurecajn
 problemojn
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+malobservas
+politikojn
+de
+Mozilla
+kaj
+ne
+povas
+esti
+instalita
+en
+%
+2
+s
 .
 <
 /
@@ -4631,6 +4781,148 @@ en
 tiu
 i
 platformo
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+%
+1
+s
+malobservas
+politikojn
+de
+Mozilla
+kaj
+ne
+povas
+esti
+instalita
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+malobservas
+politikojn
+de
+Mozilla
+kaj
+ne
+povas
+esti
+instalita
+en
+%
+2
+s
 .
 <
 /
@@ -5660,6 +5952,41 @@ string
 !
 -
 -
+"
+See
+details
+"
+link
+displayed
+below
+an
+add
+-
+on
+status
+message
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_see_details
+"
+>
+Montri
+detalojn
+<
+/
+string
+>
+<
+!
+-
+-
 Status
 message
 below
@@ -5702,6 +6029,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5713,6 +6054,295 @@ sekurecaj
 kaj
 stabilecaj
 problemoj
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Tiu
+i
+etenda
+o
+estis
+blokita
+pro
+malobservo
+de
+la
+politikoj
+de
+Mozilla
+kaj
+i
+estis
+do
+malaktivigita
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Tiu
+i
+etenda
+o
+malobservas
+politikojn
+de
+Mozilla
+kaj
+i
+estis
+do
+malaktivigita
+.
+Vi
+povas
+reaktivigi
+in
+sed
+tio
+povus
+esti
+riska
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Tiu
+i
+etenda
+o
+estis
+blokita
+pro
+malobservo
+de
+la
+politikoj
+de
+Mozilla
+kaj
+i
+estis
+do
+malaktivigita
+.
+Vi
+povas
+reaktivigi
+in
+sed
+tio
+povus
+esti
+riska
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+but
+the
+user
+re
+-
+enabled
+it
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_re_enabled
+"
+>
+Tiu
+i
+etenda
+o
+malobservas
+la
+politikojn
+de
+Mozilla
+.
+Uzi
+in
+povas
+esti
+riske
 .
 <
 /
