--- a/mobile/android/fenix/app/src/main/res/values-pl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-pl/strings.xml
@@ -3354,6 +3354,49 @@ string
 Browser
 menu
 banner
+header
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_header
+"
+>
+Masz
+zainstalowane
+rozszerzenia
+ale
+nie
+s
+w
+czone
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 body
 text
 for
@@ -3413,6 +3456,80 @@ ci
 i
 bezpiecze
 stwa
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Aby
+ich
+u
+ywa
+w
+cz
+je
+w
+ustawieniach
+lub
+wybieraj
+c
+%
+s
+poni
+ej
 .
 <
 /
@@ -6945,13 +7062,6 @@ name
 =
 "
 search_engine_icon_content_description
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Wyszukiwarka
