--- a/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-sl/strings.xml
@@ -5249,6 +5249,211 @@ string
 !
 -
 -
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+main
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_handlebar_content_description
+"
+>
+Zapri
+glavni
+meni
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+extensions
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_extensions_menu_handlebar_content_description
+"
+>
+Zapri
+meni
+raz
+iritev
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+save
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_save_menu_handlebar_content_description
+"
+>
+Zapri
+meni
+za
+shranjevanje
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+tools
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_tools_menu_handlebar_content_description
+"
+>
+Zapri
+meni
+orodij
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+custom
+tab
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_custom_tab_menu_handlebar_content_description
+"
+>
+Zapri
+meni
+zavihkov
+po
+meri
+<
+/
+string
+>
+<
+!
+-
+-
 Browser
 menu
 description
@@ -8391,6 +8596,59 @@ Firefox
 z
 raz
 iritvami
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+sub
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_sub_header
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dodajte
+raz
+iritve
+neodvisnih
+ponudnikov
+za
+ve
+jo
+varnost
+produktivnost
+in
+drugo
+.
 <
 /
 string
