--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-eu/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-eu/strings.xml
@@ -4546,6 +4546,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Ezin
 izan
@@ -4564,6 +4578,81 @@ eragiteko
 arrisku
 handia
 daukalako
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+(
+e
+)
+k
+Mozillaren
+politikak
+bortxatzen
+ditu
+eta
+ezin
+da
+%
+2
+s
+(
+e
+)
+n
+instalatu
 .
 <
 /
@@ -4686,6 +4775,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4701,6 +4804,82 @@ ditu
 eta
 ezin
 da
+instalatu
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+(
+e
+)
+k
+Mozillaren
+politikak
+bortxatzen
+ditu
+eta
+ezin
+da
+%
+2
+s
+(
+e
+)
+n
 instalatu
 .
 <
@@ -5813,6 +5992,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5826,6 +6019,69 @@ edo
 egonkortasun
 -
 arazoengatik
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Gehigarri
+hau
+blokeatuta
+dago
+Mozillaren
+politikak
+bortxatzeagatik
+eta
+desgaitu
+egin
+da
 .
 <
 /
@@ -5869,6 +6125,20 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Hedapen
 honek
@@ -5876,6 +6146,69 @@ Mozillaren
 politikak
 bortxatzen
 ditu
+eta
+desgaitu
+egin
+da
+.
+Gaitzeko
+aukera
+daukazu
+baina
+arriskutsua
+izan
+liteke
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Hedapen
+hau
+mugatuta
+dago
+Mozillaren
+politikak
+bortxatzeagatik
 eta
 desgaitu
 egin
