--- a/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-cs/strings.xml
+++ b/mobile/android/android-components/components/ui/tabcounter/src/main/res/values-cs/strings.xml
@@ -19,6 +19,38 @@ utf
 >
 <
 resources
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
+xmlns
+:
+moz
+=
+"
+http
+:
+/
+/
+mozac
+.
+org
+/
+tools
+"
 >
 <
 !
@@ -46,6 +78,20 @@ name
 =
 "
 mozac_tab_counter_open_tab_tray_single
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Jeden
@@ -90,6 +136,20 @@ name
 "
 mozac_tab_counter_open_tab_tray_plural
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -98,6 +158,63 @@ otev
 en
 ch
 panel
+.
+Klepnut
+m
+p
+epnete
+panely
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+announced
+to
+the
+user
+when
+tab
+tray
+is
+selected
+The
+%
+1
+s
+will
+be
+replaced
+by
+the
+number
+of
+opened
+tabs
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_tab_counter_open_tab_tray
+"
+>
+Otev
+en
+ch
+panel
+:
+%
+1
+s
 .
 Klepnut
 m
