--- a/mobile/android/fenix/app/src/main/res/values-cs/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-cs/strings.xml
@@ -3606,6 +3606,82 @@ string
 Browser
 menu
 banner
+body
+text
+for
+extensions
+onboarding
+when
+all
+installed
+extensions
+have
+been
+disabled
+.
+The
+first
+parameter
+is
+the
+name
+of
+the
+button
+that
+opens
+extension
+manager
+(
+for
+example
+"
+Manage
+extensions
+"
+)
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_menu_disabled_extensions_banner_onboarding_body
+"
+>
+Pro
+pou
+v
+n
+roz
+en
+je
+povolte
+v
+nastaven
+nebo
+n
+e
+klepnut
+m
+na
+%
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Browser
+menu
+banner
 link
 text
 for
@@ -5567,6 +5643,53 @@ nab
 dkou
 n
 stroj
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+bottom
+sheet
+handlebar
+custom
+tab
+menu
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_custom_tab_menu_handlebar_content_description
+"
+>
+Zav
+t
+seznam
+s
+nab
+dkou
+pro
+vlastn
+panel
 <
 /
 string
@@ -8802,6 +8925,195 @@ string
 -
 -
 Onboarding
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Nimbus
+experiments
+do
+not
+support
+string
+placeholders
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_header
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+P
+izp
+sobte
+si
+sv
+j
+Firefox
+pomoc
+roz
+en
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+sub
+header
+for
+the
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_sub_header
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+P
+id
+n
+m
+roz
+en
+t
+et
+ch
+stran
+m
+ete
+zv
+it
+zabezpe
+en
+produktivitu
+a
+roz
+it
+funkce
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
+add
+-
+ons
+card
+for
+checking
+more
+add
+-
+ons
+on
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_explore_more_extensions
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+>
+Pod
+vejte
+se
+na
+dal
+roz
+en
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Onboarding
 add
 -
 ons
@@ -9157,6 +9469,239 @@ a
 pehuj
 c
 reklamy
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Search
+by
+Image
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Vyhled
+v
+n
+podle
+obr
+zku
+<
+/
+string
+>
+<
+!
+-
+-
+Search
+by
+Image
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_search_by_image_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Pokud
+vid
+te
+zaj
+mav
+obr
+zek
+a
+chcete
+se
+o
+n
+m
+dozv
+d
+t
+v
+c
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Dark
+Reader
+name
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+Note
+:
+The
+word
+"
+Dark
+Reader
+"
+is
+a
+brand
+name
+should
+NOT
+be
+translated
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_name
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Dark
+Reader
+<
+/
+string
+>
+<
+!
+-
+-
+Privacy
+Badger
+description
+for
+the
+onboarding
+add
+-
+ons
+card
+used
+by
+Nimbus
+experiments
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_dark_reader_description
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Tmav
+re
+im
+pro
+mobiln
+web
 .
 <
 /
@@ -22005,6 +22550,99 @@ string
 !
 -
 -
+Bookmark
+snackbar
+message
+for
+deleting
+a
+single
+item
+.
+Parameter
+is
+the
+title
+of
+the
+item
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_single_item
+"
+>
+Z
+lo
+ka
+%
+s
+byla
+smaz
+na
+<
+/
+string
+>
+<
+!
+-
+-
+Bookmark
+snackbar
+message
+for
+deleting
+multiple
+items
+.
+Parameter
+is
+the
+number
+of
+items
+being
+deleted
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_multiple_items
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Smazan
+polo
+ky
+:
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 the
@@ -23911,6 +24549,52 @@ preferences_category_content
 "
 >
 Obsah
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+altering
+the
+default
+browsing
+mode
+.
+When
+enabled
+the
+desktop
+site
+will
+always
+be
+requested
+.
+-
+-
+>
+<
+string
+name
+=
+"
+preference_feature_desktop_mode_default
+"
+>
+V
+dy
+po
+adovat
+str
+nku
+pro
+po
+ta
 <
 /
 string
@@ -26587,6 +27271,69 @@ lo
 ky
 ulo
 eny
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+snackbar
+when
+user
+bookmarks
+a
+list
+of
+tabs
+.
+Parameter
+will
+be
+replaced
+by
+the
+name
+of
+the
+folder
+the
+bookmark
+was
+saved
+into
+.
+-
+-
+>
+<
+string
+name
+=
+"
+snackbar_message_bookmarks_saved_in
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Z
+lo
+ky
+ulo
+eny
+do
+%
+s
+!
 <
 /
 string
