--- a/mobile/android/focus-android/app/src/main/res/values-be/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-be/strings.xml
@@ -1296,33 +1296,6 @@ notification_erase_title_android_14
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -6297,6 +6270,20 @@ name
 =
 "
 onboarding_close_button_content_description
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 <
@@ -11712,51 +11699,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-<
-/
-string
->
-<
-!
--
--
 Preference
 for
 switching
@@ -13951,6 +13893,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 &
 quot
@@ -13991,7 +13947,143 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+&
+quot
+;
+&
+quot
+;
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+&
+quot
+;
+&
+quot
+;
 <
 /
 string
