--- a/mobile/android/focus-android/app/src/main/res/values-eo/strings.xml
+++ b/mobile/android/focus-android/app/src/main/res/values-eo/strings.xml
@@ -1387,48 +1387,6 @@ historion
 string
 >
 <
-string
-name
-=
-"
-notification_erase_text_android_14
-"
-moz
-:
-RemovedIn
-=
-"
-124
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Tu
-etu
-a
-vi
-u
-tiun
-i
-sciigon
-por
-sekure
-vi
-i
-vian
-retuman
-historion
-.
-<
-/
-string
->
-<
 !
 -
 -
@@ -6998,6 +6956,20 @@ name
 =
 "
 onboarding_close_button_content_description
+"
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
 "
 >
 Fermi
@@ -13137,55 +13109,6 @@ string
 !
 -
 -
-Text
-displayed
-in
-a
-notification
-when
-the
-user
-enters
-full
-screen
-mode
--
--
->
-<
-string
-name
-=
-"
-full_screen_notification
-"
-moz
-:
-removedIn
-=
-"
-130
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
->
-Plenekrana
-re
-imo
-aktiva
-<
-/
-string
->
-<
-!
--
--
 Preference
 for
 switching
@@ -15986,6 +15909,20 @@ name
 "
 exit_fullscreen_with_gesture
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Por
 eliri
@@ -16037,6 +15974,20 @@ name
 "
 exit_fullscreen_with_back_button
 "
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Por
 eliri
@@ -16059,6 +16010,138 @@ reen
 &
 quot
 ;
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+Trenu
+el
+supre
+kaj
+uzu
+la
+geston
+malanta
+en
+por
+eliri
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+Trenu
+el
+supre
+kaj
+premu
+la
+butonon
+malanta
+en
+por
+eliri
 <
 /
 string
