Bug 1925250 - Fix a11y description for bookmark & folder delete top bar button r=boek,android-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226311

UltraBlame original commit: ab16665bafd3d7d12d0c9e9eb7d1372830b31c03

--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -21842,6 +21842,71 @@ string
 Content
 description
 for
+the
+bookmark
+screen
+delete
+bookmark
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_bookmark_content_description
+"
+>
+Delete
+bookmark
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+bookmark
+screen
+delete
+bookmark
+folder
+navigation
+bar
+button
+-
+-
+>
+<
+string
+name
+=
+"
+bookmark_delete_folder_content_description
+"
+>
+Delete
+folder
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
 bookmark
 search
 floating
