--- a/mobile/android/fenix/app/src/main/res/values-fi/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-fi/strings.xml
@@ -41798,6 +41798,170 @@ string
 !
 -
 -
+Caption
+text
+to
+be
+displayed
+in
+review
+quality
+check
+contextual
+onboarding
+card
+above
+the
+opt
+-
+in
+button
+.
+First
+parameter
+is
+Firefox
+app
+name
+third
+parameter
+is
+the
+Fakespot
+product
+name
+.
+Second
+&
+fourth
+are
+for
+clickable
+texts
+defined
+in
+review_quality_check_contextual_onboarding_privacy_policy_3
+and
+review_quality_check_contextual_onboarding_terms_use
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_contextual_onboarding_caption_4
+"
+>
+Valitsemalla
+Kyll
+kokeile
+hyv
+ksyt
+%
+1
+sin
+%
+2
+s
+ja
+%
+3
+sin
+%
+4
+s
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Clickable
+text
+from
+the
+review
+quality
+check
+contextual
+onboarding
+card
+that
+links
+to
+Fakespot
+privacy
+notice
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_contextual_onboarding_privacy_policy_3
+"
+>
+tietosuojak
+yt
+nn
+n
+<
+/
+string
+>
+<
+!
+-
+-
+Clickable
+text
+from
+the
+review
+quality
+check
+contextual
+onboarding
+card
+that
+links
+to
+Fakespot
+terms
+of
+use
+.
+-
+-
+>
+<
+string
+name
+=
+"
+review_quality_check_contextual_onboarding_terms_use
+"
+>
+k
+ytt
+ehdot
+<
+/
+string
+>
+<
+!
+-
+-
 Text
 for
 opt
