--- a/mobile/android/android-components/components/feature/addons/src/main/res/values-es/strings.xml
+++ b/mobile/android/android-components/components/feature/addons/src/main/res/values-es/strings.xml
@@ -4658,6 +4658,20 @@ name
 "
 mozac_feature_addons_blocklisted_1
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4679,6 +4693,77 @@ de
 estabilidad
 o
 seguridad
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+a
+(
+hard
+)
+blocked
+add
+-
+on
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_blocklisted_2
+"
+>
+%
+1
+s
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+no
+se
+puede
+instalar
+en
+%
+2
+s
 .
 <
 /
@@ -4808,6 +4893,20 @@ name
 "
 mozac_feature_addons_soft_blocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -4823,6 +4922,78 @@ no
 se
 puede
 instalar
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+when
+attempting
+to
+install
+an
+add
+-
+on
+that
+is
+soft
+-
+blocked
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+%
+2
+s
+is
+the
+app
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_soft_blocked_1
+"
+>
+%
+1
+s
+viola
+las
+pol
+ticas
+de
+Mozilla
+y
+no
+se
+puede
+instalar
+en
+%
+2
+s
 .
 <
 /
@@ -5934,6 +6105,20 @@ name
 "
 mozac_feature_addons_status_blocklisted
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 %
 1
@@ -5977,6 +6162,74 @@ add
 on
 has
 been
+blocklisted
+.
+%
+1
+s
+is
+the
+add
+-
+on
+name
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_blocklisted_1
+"
+>
+Esta
+extensi
+n
+est
+bloqueada
+por
+violar
+las
+pol
+ticas
+de
+Mozilla
+y
+ha
+sido
+desactivada
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
 soft
 -
 blocked
@@ -5991,11 +6244,94 @@ name
 "
 mozac_feature_addons_status_softblocked
 "
+moz
+:
+removedIn
+=
+"
+133
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
 >
 Esta
 extensi
 n
 viola
+las
+pol
+ticas
+de
+Mozilla
+y
+ha
+sido
+desactivada
+.
+Se
+puede
+activar
+pero
+podr
+a
+ser
+arriesgado
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Status
+message
+below
+an
+add
+-
+on
+in
+the
+add
+-
+ons
+manager
+when
+this
+add
+-
+on
+has
+been
+soft
+-
+blocked
+.
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_feature_addons_status_softblocked_1
+"
+>
+Esta
+extensi
+n
+est
+restringida
+por
+violar
 las
 pol
 ticas
