--- a/mobile/android/fenix/app/src/main/res/values-gl/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gl/strings.xml
@@ -7014,13 +7014,6 @@ name
 "
 search_engine_icon_content_description
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Buscador
 %
@@ -8876,13 +8869,6 @@ name
 "
 onboarding_add_on_explore_more_extensions_2
 "
-tools
-:
-ignore
-=
-"
-UnusedResources
-"
 >
 Explora
 m
@@ -8920,13 +8906,6 @@ name
 =
 "
 onboarding_add_on_start_browsing_button_2
-"
-tools
-:
-ignore
-=
-"
-UnusedResources
 "
 >
 Iniciar
@@ -9379,6 +9358,166 @@ web
 m
 bil
 .
+<
+/
+string
+>
+<
+!
+-
+-
+Label
+for
+the
+number
+of
+reviews
+for
+an
+add
+-
+on
+.
+The
+parameter
+is
+for
+the
+formatted
+number
+of
+reviews
+e
+.
+g
+.
+"
+1
+234
+"
+"
+12
+345
+"
+"
+123
+456
+"
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_reviews_label
+"
+>
+Opini
+ns
+:
+%
+1
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+-
+on
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_icon_content_description
+"
+>
+Icona
+de
+complemento
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+add
+add
+-
+on
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_add_button_content_description
+"
+>
+Bot
+n
+Engadir
+complemento
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+star
+rating
+group
+.
+-
+-
+>
+<
+string
+name
+=
+"
+onboarding_add_on_star_rating_content_description
+"
+>
+Valorado
+%
+1
+s
+sobre
+5
 <
 /
 string
